--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>jjy Code Monkey</title>
 </head>
 <body>
-    
+    <h1>Hello Get World</h1>
+    <h2>깃을 이용하면 소스의 버전 관리를 쉽게 할 수 있습니다.</h2>
 </body>
 </html>
